--- a/03._First_Html_Server/public/home.html
+++ b/03._First_Html_Server/public/home.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>First HTML Server</title>
-</head>
-<body>
-  <h1>Home</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>First HTML Server</title>
+    </head>
+    <body>
+        <h1>Home</h1>
+
+        <!-- assignment: console log in the console "hello" a second after the client visits the frontpage-->
+    </body>
+    <script>
+        setTimeout(() => {
+            console.log('Delayed for 1 second.');
+        }, 1000);
+    </script>
 </html>
