--- a/03._First_Html_Server/public/home.html
+++ b/03._First_Html_Server/public/home.html
@@ -9,10 +9,11 @@
         <h1>Home</h1>
 
         <!-- assignment: console log in the console "hello" a second after the client visits the frontpage-->
+
+        <script>
+            setTimeout(() => {
+                console.log('Hello');
+            }, 1000);
+        </script>
     </body>
-    <script>
-        setTimeout(() => {
-            console.log('Delayed for 1 second.');
-        }, 1000);
-    </script>
 </html>
