--- a/assignment_timewebsite/public/questions.html
+++ b/assignment_timewebsite/public/questions.html
@@ -6,7 +6,6 @@
         <title>Questions</title>
         <link href="https://fonts.googleapis.com/css?family=Orbitron:400,700&display=swap" rel="stylesheet" />
         <script src="https://unpkg.com/css-doodle"></script>
-        <style>
             * {
                 margin: 0;
                 padding: 0;
@@ -243,6 +242,253 @@
             #feedback-message {
                 margin-bottom: 20px;
             }
+        </style>-->
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+                font-family: 'Orbitron', sans-serif;
+            }
+
+            body {
+                font-family: sans-serif;
+                background-color: #121212;
+                color: #eaeaea;
+            }
+
+            html,
+            body {
+                height: 100%;
+                margin: 0;
+                background: #000;
+                overflow: hidden;
+            }
+
+            css-doodle {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                pointer-events: none;
+            }
+
+            .quiz-container::before,
+            .quiz-container::after,
+            .quiz-container > div::before,
+            .quiz-container > div::after {
+                content: '';
+                position: absolute;
+                background: rgba(255, 255, 255, 0.6);
+                pointer-events: none;
+                border-radius: 50%;
+                opacity: 0.6;
+                z-index: -1;
+            }
+
+            .quiz-container::before {
+                top: -20%;
+                left: 20%;
+                width: 20px;
+                height: 20px;
+                animation: particleFall 10s infinite;
+            }
+
+            .quiz-container {
+                position: relative;
+                max-width: 1200px;
+                margin: 100px auto;
+                padding: 40px;
+                background-color: #222;
+                border-radius: 16px;
+                box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
+                height: 600px;
+                overflow-y: auto;
+            }
+
+            .quiz-question {
+                font-size: 48px;
+                font-weight: bold;
+                margin-bottom: 40px;
+                color: #ffffff;
+                border-bottom: 4px solid #444;
+                padding-bottom: 20px;
+            }
+
+            .quiz-choices {
+                font-size: 36px;
+                margin-bottom: 40px;
+            }
+
+            button {
+                display: block;
+                width: 400px;
+                padding: 20px 30px;
+                background-color: #555;
+                color: #ffffff;
+                font-size: 36px;
+                border: none;
+                border-radius: 10px;
+                cursor: pointer;
+                transition: background-color 0.3s;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .button:hover {
+                background-color: #777;
+            }
+
+            button:active {
+                background-color: #333;
+            }
+
+            button:focus {
+                outline: none;
+                box-shadow: 0 0 20px rgba(0, 123, 255, 0.5);
+            }
+
+            .progressBar {
+                display: flex;
+                width: 100%;
+                flex-direction: row;
+                align-items: flex-end;
+                padding: 20px;
+                background: #222;
+                box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+            }
+
+            .era {
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                transition: background-color 0.5s;
+            }
+
+            .era-title {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-bottom: 20px;
+                text-align: center;
+                font-weight: bold;
+                font-family: 'Orbitron', sans-serif;
+                color: #eaeaea;
+                font-size: 20px;
+                border-radius: 20px;
+                height: 60px;
+                transition: box-shadow 0.3s ease, font-weight 0.3s ease;
+            }
+
+            .era.active .era-title {
+                font-weight: bold;
+                box-shadow: 0 0 20px rgba(0, 123, 255, 1);
+                background-color: rgba(0, 123, 255, 0.5);
+            }
+
+            .era.active .questions-container {
+                box-shadow: 0 0 20px rgba(0, 123, 255, 1);
+            }
+
+            .questions-container {
+                display: flex;
+                height: 60px;
+                width: 100%;
+                overflow: hidden;
+                border-radius: 20px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            }
+            .question {
+                flex: 1;
+                background-color: #555;
+                border-left: 2px solid rgba(0, 0, 0, 0.1);
+                transition: background-color 0.5s, transform 0.3s;
+                cursor: pointer;
+            }
+
+            .question:hover {
+                transform: scale(1.05);
+            }
+
+            .question:first-child {
+                border-left: none;
+            }
+
+            .question.completed {
+                background-color: #007bff;
+            }
+
+            .era.completed .questions-container {
+                background-color: #82b1ff;
+                box-shadow: 0 0 40px rgba(0, 123, 255, 0.8);
+            }
+
+            .questions-container.completed .question {
+                border: none;
+                background-color: #4caf50;
+            }
+
+            .questions-container {
+                border-radius: 0;
+            }
+
+            .progressBar .era:first-child .questions-container {
+                border-top-left-radius: 20px;
+                border-bottom-left-radius: 20px;
+            }
+
+            .progressBar .era:last-child .questions-container {
+                border-top-right-radius: 20px;
+                border-bottom-right-radius: 20px;
+            }
+
+            dialog {
+                position: absolute;
+                top: 100px;
+                left: 50%;
+                transform: translate(-50%, 0);
+                max-width: 1200px;
+                width: 100%;
+                background-color: #222;
+                border: none;
+                border-radius: 8px;
+                height: 600px;
+                box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
+                justify-content: center;
+                align-items: center;
+                z-index: 1000;
+                color: #eaeaea;
+                font-family: 'Orbitron', sans-serif;
+            }
+
+            .dialog-content {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+
+            dialog div {
+                text-align: center;
+            }
+
+            #feedback-message {
+                margin-bottom: 40px;
+            }
+
+            input[type='radio'] {
+                transform: scale(1.8);
+            }
+
+            label {
+                display: flex;
+                align-items: center;
+                justify-content: start;
+                gap: 10px;
+            }
         </style>
     </head>
     <body>
@@ -445,7 +691,6 @@
                             typeChoice(choiceIndex, choice, charIndex + 1);
                         }, 50); // Letter typing speed
                     } else {
-                        choicesDiv.appendChild(document.createElement('br'));
                         choiceIndex++;
                         if (choiceIndex < choices.length) {
                             setTimeout(() => {
