--- a/assignment_timewebsite/public/questions.html
+++ b/assignment_timewebsite/public/questions.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Questions</title>
+        <title>Time Traveler Quiz</title>
         <link href="https://fonts.googleapis.com/css?family=Orbitron:400,700&display=swap" rel="stylesheet" />
         <script src="https://unpkg.com/css-doodle"></script>
         <style>
@@ -418,7 +418,7 @@
                         clearInterval(interval);
                         displayChoicesWithTypewriter(question.choices);
                     }
-                }, 50); //Speed for writing question
+                }, 50); //Speed for writing questions
             }
 
             function displayChoicesWithTypewriter(choices) {
