--- a/assignment_timewebsite/public/questions.html
+++ b/assignment_timewebsite/public/questions.html
@@ -378,7 +378,7 @@
             const feedbackMessage = document.getElementById('feedback-message');
 
             function displayStartMessage() {
-                feedbackMessage.innerText = 'Welcome to the Time Travel Quiz!\n\n Can you make it back to the present?\n\n Click "Start" to begin.';
+                feedbackMessage.innerText = 'Welcome to the Time Traveler Quiz!\n\n Can you make it back to the present?\n\n Click "Start" to begin.';
                 document.getElementById('close-dialog').innerText = 'Start';
                 feedbackDialog.showModal();
             }
