--- a/assignment_timewebsite/public/questions.html
+++ b/assignment_timewebsite/public/questions.html
@@ -25,7 +25,7 @@
                 height: 100%;
                 margin: 0;
                 background: #000;
-                overflow: hidden;
+                overflow: auto;
             }
 
             css-doodle {
