--- a/03._First_Html_Server/public/secondPage.html
+++ b/03._First_Html_Server/public/secondPage.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>First HTML Server</title>
-</head>
-<body>
-  <h1>Second page</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>First HTML Server</title>
+    </head>
+    <body>
+        <h1>Second page</h1>
+        <!--<script src="./dinosaurFactory.js"></script>-->
+        <script type="module" src="./dinosaurs.js"></script>
+    </body>
 </html>
