--- a/Mandatory_I/public/frontpage.html
+++ b/Mandatory_I/public/frontpage.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandatory Assignment</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="../css/frontpage.css" rel="stylesheet">
-    <style>
-        
-    </style>
+    <link href="./frontpage.css" rel="stylesheet">
 </head>
 
 <body>
@@ -195,5 +192,5 @@ To github.com:user/project.git
         <div id="content-spacer"></div>
     </div>
 
-    <script src="../js/frontpage.js"></script>
+    <script src="./frontpage.js"></script>
 </body>
