added a top navbar

--- a/Mandatory_I/public/frontpage.html
+++ b/Mandatory_I/public/frontpage.html
@@ -6,37 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandatory Assignment</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <link href="./frontpage.css" rel="stylesheet">
 </head>
 
 <body>
+    <div id="os-navbar">
+        <div class="navbar-container">
+            <a href="#" class="nav-item">Home</a>
+            <a href="#" class="nav-item">About</a>
+            <a href="#" class="nav-item">Services</a>
+            <a href="#" class="nav-item">Contact</a>
+        </div>
+    </div>
+
     <nav>
         <ul>
-            <li>
-                <a href="#main-title-1" class="spy-link"><i class="fas fa-folder"></i> Main Title 1</a>
-                <ul>
-                    <li><a href="#sub-title-1-1" class="spy-sublink"><i class="fas fa-folder-open"></i> Sub Title
-                            1.1</a></li>
-                    <li><a href="#sub-title-1-2" class="spy-sublink"><i class="fas fa-folder-open"></i> Sub Title
-                            1.2</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#main-title-2" class="spy-link"><i class="fas fa-folder"></i> Main Title 2</a>
-                <ul>
-                    <li><a href="#sub-title-2-1" class="spy-sublink"><i class="fas fa-folder-open"></i> Sub Title
-                            2.1</a></li>
-                    <li><a href="#sub-title-2-2" class="spy-sublink"><i class="fas fa-folder-open"></i> Sub Title
-                            2.2</a></li>
-                </ul>
-            </li>
+
         </ul>
     </nav>
 
     <div class="window toc-section">
         <div class="window-main-title" id="main-title-1">Main Title 1</div>
         <div class="content toc-subsection">
-            <div class="window-sub-title" id="sub-title-1-1">Sub Title 1.1</div>
+            <div class="window-sub-title" id="sub-title-1-1">Sub Title 1.1 Test of the title length</div>
             <pre class="code-snippet">
                 window.addEventListener('scroll', () => {
                     let currentSection = "";
@@ -189,8 +183,40 @@ To github.com:user/project.git
             <div class="window-description">Description
             </div>
         </div>
+
+        <div class="content toc-subsection">
+            <div class="window-sub-title" id="sub-title-2-3">Sub Title 2.3</div>
+            <pre class="terminal-snippet">
+                $ cat style.css
+/* Some CSS code... */
+
+$ git status
+On branch main
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git checkout -- <file>..." to discard changes in working directory)
+  
+    modified:   style.css
+
+no changes added to commit (use "git add" and/or "git commit -a")
+
+$ git add style.css
+$ git commit -m "Updated styles for dark theme"
+[main 7f8c6d0] Updated styles for dark theme
+ 1 file changed, 12 insertions(+), 2 deletions(-)
+ 
+$ git push origin main
+Enumerating objects: 5, done.
+Counting objects: 100% (5/5), done.
+Writing objects: 100% (3/3), 320 bytes | 320.00 KiB/s, done.
+Total 3 (delta 0), reused 0 (delta 0)
+To github.com:user/project.git
+   a3c6f4b..7f8c6d0  main -> main
+            </pre>
+            <div class="window-description">Description
+            </div>
+        </div>
         <div id="content-spacer"></div>
     </div>
-
     <script src="./frontpage.js"></script>
 </body>
