--- a/03._First_Html_Server/public/secondPage.html
+++ b/03._First_Html_Server/public/secondPage.html
@@ -9,5 +9,9 @@
         <h1>Second page</h1>
         <!--<script src="./dinosaurFactory.js"></script>-->
         <script type="module" src="./dinosaurs.js"></script>
+        <script></script>
+
+        
     </body>
+
 </html>
