added navbar and logo

--- a/03._First_Html_Server/public/home.html
+++ b/03._First_Html_Server/public/home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./home.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--This is one way to redirect-->
+    <!--This is one way to redirect, don't use this-->
     <!--<meta http-equiv="refresh" content="3;url=/secondPage" />-->
     <title>First HTML Server</title>
 </head>
