--- a/05._Pokemon/public/battle/battle.html
+++ b/05._Pokemon/public/battle/battle.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
   <link rel="stylesheet" href="/assests/css/main.css">
+  <link rel="stylesheet" href="/battle/battle.css">
   <title>Battle</title>
 </head>
 
@@ -16,8 +17,15 @@
     <a href="/contact">Contact</a>
   </nav>
   <main>
-    <h1>Battle</h1>
+    <h1>Battle (Refresh to attack 1)</h1>
+
+    <h3>Pokemon in battle:</h3>
+    <h3 id="pokemon-name"></h3>
+    <p id="pokemon-strength"></p>
+    <div id="image-wrapper"></div>
   </main>
+  <script src="/assests/js/footer.js"></script>
+  <script src="/battle/battle.js"></script>
 </body>
 
 </html>
