--- a/05._Pokemon/public/frontpage/frontpage.html
+++ b/05._Pokemon/public/frontpage/frontpage.html
@@ -24,6 +24,8 @@
         <h3 id="pokemon-name"></h3>
         <div id="image-wrapper"></div>
     </main>
+
+    <script src="/assests/js/footer.js"></script>
     <script src="frontpage/frontpage.js"></script>
 </body>
 
