--- a/Mandatory_I/public/javascriptfundamentalspage/javascriptfundamentalspage.html
+++ b/Mandatory_I/public/javascriptfundamentalspage/javascriptfundamentalspage.html
@@ -4,23 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mandatory Assignment</title>
+    <title>Javascript Fundamentals</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <link href="./frontpage.css" rel="stylesheet">
+    <link href="/page.css" rel="stylesheet">
 </head>
 
 <body>
-    <div id="os-navbar">
-        <div class="navbar-container">
-            <a href="#" class="nav-item">Home</a>
-            <a href="#" class="nav-item">About</a>
-            <a href="#" class="nav-item">Services</a>
-            <a href="#" class="nav-item">Contact</a>
-        </div>
-    </div>
-
     <nav>
         <ul>
 
@@ -218,5 +209,6 @@ To github.com:user/project.git
         </div>
         <div id="content-spacer"></div>
     </div>
-    <script src="./frontpage.js"></script>
+    <script src="/assets/js/navbar.js"></script>
+    <script src="/assets/js/scrollspy.js"></script>
 </body>
