--- a/Mandatory_I/public/adminpage/adminpage.html
+++ b/Mandatory_I/public/adminpage/adminpage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>Admin Page</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="/page.css" rel="stylesheet">
@@ -12,12 +12,11 @@
 
 <body>
   <div class="centered-container">
-    <div class="welcome-title">Welcome to Node.js Universe</div>
+    <div class="welcome-title">Admin Dashboard</div>
     <div class="welcome-description">
-      Dive into the world of Node.js and discover the infinite possibilities it holds. Whether you're a beginner taking your first steps or an expert seeking advanced techniques, we've got you covered. Browse through tutorials, code snippets, and insights to empower your Node.js journey.
+      Welcome to the administrative hub of this platform. Here, you'd typically find tools and functionalities to manage users, monitor activities, and maintain the system. However, this is just a mock admin page and there's not much to do here. Thank you for stopping by!
     </div>
   </div>
-
   <script src="/assets/js/navbar.js"></script>
 </body>
 
