--- a/Mandatory_I/public/loginpage/loginpage.html
+++ b/Mandatory_I/public/loginpage/loginpage.html
@@ -8,18 +8,49 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="/page.css" rel="stylesheet">
+  <style>
+    /* CSS for centering the login window */
+    .centered-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      /* Cover the full viewport height */
+    }
+
+    .window {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  </style>
 </head>
 
 <body>
   <div class="centered-container">
-    <div class="welcome-title">Welcome to Node.js Universe</div>
-    <div class="welcome-description">
-      Dive into the world of Node.js and discover the infinite possibilities it holds. Whether you're a beginner taking your first steps or an expert seeking advanced techniques, we've got you covered. Browse through tutorials, code snippets, and insights to empower your Node.js journey.
+    <div class="window" style="width: 300px; margin: 0 auto;">
+
+      <form action="/login" method="post">
+        <div style="margin: 10px 15px;">
+          <label for="username" style="display: block; margin-bottom: 5px;">Username:</label>
+          <input type="text" id="username" name="username" placeholder="Enter username"
+            style="width: 100%; padding: 8px; border: 1px solid #515454; border-radius: 5px; background-color: #3C3F41; color: #C7C9CB;">
+        </div>
+
+        <div style="margin: 10px 15px;">
+          <label for="password" style="display: block; margin-bottom: 5px;">Password:</label>
+          <input type="password" id="password" name="password" placeholder="Enter password"
+            style="width: 100%; padding: 8px; border: 1px solid #515454; border-radius: 5px; background-color: #3C3F41; color: #C7C9CB;">
+        </div>
+
+        <button type="submit"
+          style="background-color: #555; color: white; padding: 10px 15px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s; margin-left: 15px;">Login</button>
+      </form>
     </div>
   </div>
 
   <script src="/assets/js/navbar.js"></script>
-  <script src="/assets/js/footer.js"></script>
 </body>
 
 </html>
