--- a/Mandatory_I/public/loginpage/loginpage.html
+++ b/Mandatory_I/public/loginpage/loginpage.html
@@ -7,7 +7,7 @@
   <title>Login</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link href="/page.css" rel="stylesheet">
+  <link href="/assets/css/page.css" rel="stylesheet">
   <style>
     /* CSS for centering the login window */
     .centered-container {
